--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,7 +16,7 @@
                         </ul>
                         <ul class="navbar-nav ml-auto">
                             {% if user.is_authenticated %}
-                            <a href="{% url 'user_detail' user.slug %}">
+                            <a href="{% url 'user_detail' %}">
                                 <li class="nav-item">
                                     <div class="nav-link">Здравствуйте, {{ user.name }}</div>
                                 </li>
