--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,3 +6,13 @@
     margin-bottom: 15px;
 }
 
+.cus-but {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.cus-img {
+    margin: 15px;
+    height: 200px;
+    width: auto;
+}
