--- a/users/templates/users/custom_detail_view.html
+++ b/users/templates/users/custom_detail_view.html
@@ -4,12 +4,21 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-12">
-            <img src="{{ MEDIA_URL }}{{ user.avatar.url }}" height="200" width="auto">
-            <h3>Username: {{ user.name }}</h3>
-            <h4>ФИО: {{ user.full_name }}</h4>
-            <h5>Номер телефона: {{ user.phone }}</h5>
-            <h5>Дата рождения: {{ user.date_birth }}</h5>
+        <div class="col-lg-12 card">
+<!--            <ul>-->
+                <img src="{{ MEDIA_URL }}{{ user.avatar.url }}" class="cus-img">
+                <ul class="">
+                    Username: <h3>{{ user.name }}</h3>
+                    ФИО: <h4>{{ user.full_name }}</h4>
+                    Номер телефона: <h5>{{ user.phone }}</h5>
+                    Дата рождения: <h5>{{ user.date_birth }}</h5>
+                </ul>
+<!--            </ul>-->
+            <a href="{% url 'change' user.slug %}">
+                <button type="submit" class="btn btn-success cus-but">
+                    Обновить
+                </button>
+            </a>
             {% if user.is_admin %}
             <div class="alert alert-success">
                 <center>
